adding exmaples (as test) the use of Template prompts